--- a/DeiC HPC Usage Data/DeiC HPC Usage Data Verify/DeiC HPC Usage Data Verify.csproj
+++ b/DeiC HPC Usage Data/DeiC HPC Usage Data Verify/DeiC HPC Usage Data Verify.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DeiC HPC Usage Data\DeiC HPC Usage Data.csproj" />
   </ItemGroup>
 
